# Locus-Game-Engine

./: CMakeLists.txt  CREDITS.txt  LICENSE.txt  README.md  README_CODE_REVIEW.txt  THIRD-PARTY-LICENSE.txt
cmake/: Config.cmake  FindOpenAL.cmake  GlobalProjectOptions.cmake  MSVCOptions.cmake  SetMSVCRuntimeLibrarySettings.cmake  SetMSVCWarningLevel4.cmake  UnixOptions.cmake
examples/: README.md
examples/Collisions/: CMakeLists.txt  CollidableMesh.cpp  CollidableMesh.h  CollisionScene.cpp  CollisionScene.h  Main.cpp
examples/Triangulation/: CMakeLists.txt  Main.cpp  TriangulationScene.cpp  TriangulationScene.h
include/Locus/Audio/: LocusAudioAPI.h  OGGLoading.h  SoundData.h  SoundEffect.h  SoundState.h  WAVLoading.h
include/Locus/Common/: Array3D.h  Casts.h  CircularList.h  Endian.h  Exception.h  Float.h  IDGenerator.h  IDType.h  LocusCommonAPI.h  Parsing.h  Random.h  ScopeFinalizer.h  SequentialIDGenerator.h  StaticAssertFalse.h  Util.h
include/Locus/FileSystem/: DataStream.h  File.h  FileOnDisk.h  FileSystem.h  FileSystemUtil.h  InMemoryDataStream.h  LocusFileSystemAPI.h  MountedFilePath.h
include/Locus/Geometry/: AxisAlignedBox.h  BoundingVolumeHierarchy.h  Collidable.h  CollisionManager.h  DualTransformation.h  Frustum.h  Geometry.h  IntersectionTypes.h  Line.h  LineFwd.h  LineSegment.h  LineSegmentFwd.h  LocusGeometryAPI.h  Model.h  ModelUtility.h  MotionProperties.h  Moveable.h  Octree.h  OrientedBox.h  Plane.h  PointCloud.h  Polygon.h  PolygonFwd.h  PolygonHierarchy.h  PolygonWinding.h  Quaternion.h  Sphere.h  Transformation.h  Triangle.h  TriangleFwd.h  Triangulation.h  Vector2.h  Vector2Geometry.h  Vector3.h  Vector3Geometry.h
include/Locus/Math/: ComplexUtil.h  LocusMathAPI.h  MByNIterations.h  Matrix.h  Polynomial.h  SJTPermutations.h  SquareMatrix.h  Vectors.h  VectorsFwd.h
include/Locus/Preprocessor/: BeginSilenceDLLInterfaceWarnings  CompilerDefinitions.h  EndSilenceDLLInterfaceWarnings
include/Locus/Rendering/: Color.h  ConstrainedViewpoint.h  DefaultGPUVertexData.h  DefaultSingleDrawable.h  DrawUtility.h  Drawable.h  DrawablePointCloud.h  GLCommonTypes.h  GLInfo.h  GPUVertexData.h  GPUVertexDataStorage.h  Image.h  Light.h  LineCollection.h  LineSegmentCollection.h  LocusRenderingAPI.h  LocusRenderingAPI.h~  Locus_glew.h  Mesh.h  MeshUtility.h  OffscreenBuffer.h  Quad.h  Rasterization.h  RenderingState.h  SAPReading.h  Shader.h  ShaderController.h  ShaderLinkException.h  ShaderProgram.h  ShaderSourceStore.h  ShaderVariables.h  SingleDrawable.h  SkyBox.h  Texture.h  TextureArray.h  TextureCoordinate.h  TextureFiltering.h  TextureManager.h  TransformationStack.h  Viewpoint.h
include/Locus/Simulation/: LocusSimulationAPI.h  Scene.h  SceneManager.h  UserEvents.h  Window.h  WindowContext.h  WindowEventListener.h
include/Locus/XML/: LocusXMLAPI.h  XMLAttribute.h  XMLParsing.h  XMLTag.h
src/: CMakeLists.txt
src/Audio/: CMakeLists.txt  OGGLoading.cpp  OGGLoading.h  OpenALUtil.cpp  OpenALUtil.h  SoundData.h  SoundEffect.cpp  SoundState.cpp  WAVLoading.cpp  WAVLoading.h
src/Common/: CMakeLists.txt  Endian.cpp  Exception.cpp  Float.cpp  IDGenerator.cpp  IDType.cpp  Parsing.cpp  Random.cpp  ScopeFinalizer.cpp  SequentialIDGenerator.cpp  Util.cpp
src/Doxygen/: namespace.dox
src/Doxygen/Examples/: MByNIterationsExample.cpp  MountDirectoryOrArchive.cpp  SJTPermutationsExample.cpp  SoundEffectsExample.cpp
src/FileSystem/: CMakeLists.txt  DataStream.cpp  File.cpp  FileOnDisk.cpp  FileSystem.cpp  FileSystemUtil.cpp  InMemoryDataStream.cpp  MountedFilePath.cpp
src/Geometry/: AxisAlignedBox.cpp  BoundingVolumeHierarchy.cpp  CMakeLists.txt  Collidable.cpp  CollisionManager.cpp  DualTransformation.cpp  EarClipper.cpp  EarClipper.h  EarClipping.cpp  EarClipping.h  EarClippingImpl.cpp  EarClippingImpl.h  Frustum.cpp  Geometry.cpp  Line.cpp  LineSegment.cpp  ModelUtility.cpp  Moveable.cpp  Octree.cpp  OrientedBox.cpp  Plane.cpp  PointCloud.cpp  Polygon.cpp  PolygonHierarchy.cpp  PolygonWinding.cpp  Quaternion.cpp  Sphere.cpp  Transformation.cpp  Triangle.cpp  Triangulation.cpp  Vector2.cpp  Vector2Geometry.cpp  Vector3.cpp  Vector3Geometry.cpp
src/Math/: CMakeLists.txt  MByNIterations.cpp  Matrix.cpp  Polynomial.cpp  SJTPermutations.cpp  SquareMatrix.cpp  Vectors.cpp
src/Rendering/: CMakeLists.txt  Color.cpp  ConstrainedViewpoint.cpp  DefaultGPUVertexData.cpp  DefaultSingleDrawable.cpp  DrawUtility.cpp  Drawable.cpp  DrawablePointCloud.cpp  GLInfo.cpp  GPUVertexData.cpp  Image.cpp  LineCollection.cpp  LineSegmentCollection.cpp  Locus_glew.cpp  Mesh.cpp  MeshUtility.cpp  OffscreenBuffer.cpp  Quad.cpp  Rasterization.cpp  RenderingState.cpp  SAPReading.cpp  Shader.cpp  ShaderController.cpp  ShaderLinkException.cpp  ShaderProgram.cpp  ShaderSourceStore.cpp  ShaderVariables.cpp  SingleDrawable.cpp  SkyBox.cpp  Texture.cpp  TextureArray.cpp  TextureCoordinate.cpp  TextureManager.cpp  TransformationStack.cpp  Viewpoint.cpp
src/Simulation/: CMakeLists.txt  Scene.cpp  SceneManager.cpp  Window.cpp  WindowContext.cpp
src/XML/: CMakeLists.txt  XMLAttribute.cpp  XMLParsing.cpp  XMLTag.cpp
ubuntu/: EnvironmentSetup.sh  GrabDependencies.sh  MultipleGCCVersionsCheatSheet.txt
