###########################################################################################################
#                                                                                                         #
#    This file is part of the Locus Game Engine                                                           #
#                                                                                                         #
#    Copyright (c) 2014 Shachar Avni. All rights reserved.                                                #
#                                                                                                         #
#    Use of this file is governed by a BSD-style license. See the accompanying LICENSE.txt for details    #
#                                                                                                         #
###########################################################################################################

cmake_minimum_required(VERSION 2.8)

add_subdirectory(Audio)
add_subdirectory(Common)
add_subdirectory(FileSystem)
add_subdirectory(Simulation)
add_subdirectory(Geometry)
add_subdirectory("Math")
add_subdirectory(Rendering)